fix: :hammer: previous and next button z-index

--- a/src/assets/css/page.scss
+++ b/src/assets/css/page.scss
@@ -167,6 +167,7 @@
     justify-content: center;
     align-items: center;
     font-family: 'Archivo Black', sans-serif;
+    z-index: 999;
 
     a {
         position: relative;
@@ -249,6 +250,7 @@
     justify-content: center;
     align-items: center;
     font-family: 'Archivo Black', sans-serif;
+    z-index: 999;
 
     a {
         position: relative;
